--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "from2": "^1.3.0",
+    "standard": "^3.3.2",
     "tape": "^4.0.0"
   },
   "repository": {
@@ -13,7 +14,7 @@
     "url": "https://github.com/mafintosh/stream-iterate.git"
   },
   "scripts": {
-    "test": "tape test.js"
+    "test": "standard && tape test.js"
   },
   "author": "Mathias Buus (@mafintosh)",
   "license": "MIT",
