--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.1.1",
   "description": "Iterate through the values of a stream",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "readable-stream": "^2.1.5",
+    "stream-shift": "^1.0.0"
+  },
   "devDependencies": {
     "from2": "^1.3.0",
     "standard": "^3.3.2",
